@@ -1,3 +1,8 @@
+2007-10-28 [colin]	0.15.2cvs8
+
+	* src/gtkhtml2_prefs.c
+		Fix sensitivity when enabling image loading
+
 2007-10-28 [colin]	0.15.2cvs7
 
 	* src/gtkhtml2_prefs.c
